use domain model in pageable including location
